rust/kcl-lib/tests/array_push_item_wrong_type/execution_error.snap
---
source: kcl-lib/src/simulation_tests.rs
description: Error from executing array_push_item_wrong_type.kcl
---
KCL Type error

  × type: You can't push a value of type number(Length) to an array with
  │ element type number(Count). Try coercing either the array or the item
  │ first.
   ╭─[2:12]
 1 │ arr = [1, 2, 3]: [number(_)]
 2 │ arrPrime = push(arr, item = 4mm)
   ·            ──────────┬──────────
   ·                      ╰── tests/array_push_item_wrong_type/input.kcl
 3 │ assertIs(false, error = "shouldn't make it here")
   ╰────
